# fhnw_ml_ops_project

./: .env.example  .gitignore  Dockerfile  README.md  config.json  model_config.json  pyproject.toml  requirements.txt
data/: climb_logs.csv  crags.json
src/: config.py  labeling.py  weather_client.py
src/app/: streamlit_app.py
src/features/: crag_features.py  weather_features.py
src/pipelines/: __init__.py  feature_pipeline.py  inference_pipeline.py  promote_model.py  training_pipeline.py
